--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "minimum-stability": "dev",
   "prefer-stable": true,
-  "require": {
+  "require-dev": {
     "phpunit/phpunit": "^6.5",
     "phpstan/phpstan": "^0.9.1",
     "phpstan/phpstan-strict-rules": "^0.9.0"
@@ -11,8 +11,13 @@
       "Hashing\\": "src"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
   "scripts": {
     "test": "phpunit",
-    "phpstan": "phpstan analyse src -l 7 -c phpstan.neon"
+    "phpstan": "phpstan analyse src tests -l 7 -c phpstan.neon"
   }
 }
