--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
   "prefer-stable": true,
   "require-dev": {
     "phpunit/phpunit": "^9.0",
-    "phpstan/phpstan": "^0.9.1",
-    "phpstan/phpstan-strict-rules": "^0.9.0"
+    "phpstan/phpstan": "^0.12",
+    "phpstan/phpstan-strict-rules": "^0.12"
   },
   "autoload": {
     "psr-4": {
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "test": "phpunit",
-    "phpstan": "phpstan analyse src tests -l 7 -c phpstan.neon",
+    "phpstan": "phpstan analyse src tests -l max -c phpstan.neon",
     "coverage": [
       "test -d extension=xdebug.so --coverage ./coverage.xml --coverage-src ./src tests/"
     ]
